--- a/00 Doc/DV_RProject2.Rmd
+++ b/00 Doc/DV_RProject2.Rmd
@@ -9,4 +9,19 @@ __GitHub__: https://github.com/joseacortez91/DV_RProject2
 
 This project deals with creating interesting graphs of exoplanet data from (Where ever this data is from), using packages like tidyr and dplyr, as well as ggplots2.
 
+## Load necessary packages
+```{r message=F}
+source("../01 Data/load_packages.R",echo=TRUE)
+```
+
 ## Database Creations
+```{r message=F}
+source("../01 Data/create-df.R",echo=TRUE)
+```
+
+## Data Wrangling
+
+### Isolate Mass and Radius
+```{r message=F}
+source("../02 Data Wrangling/mass_radius.R",echo=TRUE)
+```
