--- a/00 Doc/DV_RProject2.Rmd
+++ b/00 Doc/DV_RProject2.Rmd
@@ -10,18 +10,23 @@ __GitHub__: https://github.com/joseacortez91/DV_RProject2
 This project deals with creating interesting graphs of exoplanet data from (Where ever this data is from), using packages like tidyr and dplyr, as well as ggplots2.
 
 ## Load necessary packages
-```{r message=F}
+```{r message=FALSE}
 source("../01 Data/load_packages.R",echo=TRUE)
 ```
 
 ## Database Creations
-```{r message=F}
+```{r message=FALSE}
 source("../01 Data/create-df.R",echo=TRUE)
 ```
 
 ## Data Wrangling
 
-### Isolate Mass and Radius
-```{r message=F}
+### Isolate mass and radius, grouping the data set into ten percentiles by mass, and generate summary results
+```{r message=FALSE}
 source("../02 Data Wrangling/mass_radius.R",echo=TRUE)
+```
+
+### Plot the curve to show increase in mass and radius at each percentile
+```{r message=FALSE, fig.width=12, fig.height=7.5}
+source("../03 Visualizations/mass_radius_analysis.R", echo=TRUE)
 ```
