--- a/00 Doc/DV_RProject2.Rmd
+++ b/00 Doc/DV_RProject2.Rmd
@@ -7,7 +7,7 @@ __By Alex Cortez, Adam Hernandex, and Alex Pearce__
 
 __GitHub__: https://github.com/joseacortez91/DV_RProject2
 
-This project deals with creating interesting graphs of exoplanet data from (Where ever this data is from), using packages like tidyr and dplyr, as well as ggplots2.
+This project deals with creating interesting graphs of exoplanet data from (**source of the data**), using packages like tidyr and dplyr, as well as our standard class packages.
 
 ## Load necessary packages
 ```{r message=FALSE}
