--- a/00 Doc/DV_RProject2.Rmd
+++ b/00 Doc/DV_RProject2.Rmd
@@ -30,3 +30,35 @@ source("../02 Data Wrangling/mass_radius.R",echo=TRUE)
 ```{r message=FALSE, fig.width=12, fig.height=7.5}
 source("../03 Visualizations/mass_radius_analysis.R", echo=TRUE)
 ```
+
+## Orbital Eccentricity Analysis
+Via Wikipedia:
+
+> The orbital eccentricity of an astronomical object is a parameter that determines the amount
+by which its orbit around another body deviates from a perfect circle. A value of 0 is a
+circular orbit, values between 0 and 1 form an elliptical orbit, 1 is a parabolic escape orbi
+, and greater than 1 is a hyperbola. The term derives its name from the parameters of conic
+sections, as every Kepler orbit is a conic section. It is normally used for the isolated tw
+-body problem, but extensions exist for objects following a rosette orbit through the galaxy.
+
+How incredibly interesting. This analysis deals with looking at individual solar systems and their average mass, eccentricity, and orbital period. By using data-wrangling, subsetting the data for this desired visualization was done with ease. We first take a look at solar systems with more than one planet, and then those we more than one in order to "zoom-in" to the data. 
+
+```{r message=FALSE}
+source("../02 Data Wrangling/eccentricity.R",echo=TRUE)
+```
+
+After all null values are filtered out, the SUN column is created by ommiting the last character of the NAMES column in order to provide duplicate values for planets in the same solar system. 
+
+This output is piped for selection of the SUN, ECCENTRICITY, ORB_PERIOD, and MASS columns. 
+
+Subsequent groupby and summarise functions group the planets into their respective suns, and returns the mean of the variables in question. 
+
+Finally, for ease of representing the mean cummulative distribution of planet mass per star, the mass data is piped first with cumme _ dist followed by the ntile function to separate the quantiles of the distribution. 
+
+This Is done yet again for the second graph, yet the filter(Planets >1) workflow portion is ommited. 
+
+###The Wrangled Data Provides the following plots:
+```{r message=FALSE, fig.width=12, fig.height=7.5}
+source("../03 Visualizations/eccen_analysis_1.R", echo=TRUE)
+source("../03 Visualizations/eccen_analysis_2.R", echo=TRUE)
+```
