--- a/00 Doc/DV_RProject2.Rmd
+++ b/00 Doc/DV_RProject2.Rmd
@@ -31,19 +31,14 @@ source("../02 Data Wrangling/mass_radius.R",echo=TRUE)
 source("../03 Visualizations/mass_radius_analysis.R", echo=TRUE)
 ```
 
-## Orbital Eccentricity Analysis
+# Orbital Eccentricity Analysis
 Via Wikipedia:
 
-> The orbital eccentricity of an astronomical object is a parameter that determines the amount
-by which its orbit around another body deviates from a perfect circle. A value of 0 is a
-circular orbit, values between 0 and 1 form an elliptical orbit, 1 is a parabolic escape orbi
-, and greater than 1 is a hyperbola. The term derives its name from the parameters of conic
-sections, as every Kepler orbit is a conic section. It is normally used for the isolated tw
--body problem, but extensions exist for objects following a rosette orbit through the galaxy.
+> The orbital eccentricity of an astronomical object is a parameter that determines the amount by which its orbit around another body deviates from a perfect circle. A value of 0 is a circular orbit, values between 0 and 1 form an elliptical orbit, 1 is a parabolic escape orbit, and greater than 1 is a hyperbola. The term derives its name from the parameters of conic sections, as every Kepler orbit is a conic section. It is normally used for the isolated two-body problem, but extensions exist for objects following a rosette orbit through the galaxy.
 
-How incredibly interesting. This analysis deals with looking at exoplanets of individual solar systems along with their average mass, eccentricity, and orbital period. By using data-wrangling, subsetting the data for this desired visualization was done with ease. We first "zoom-in" to the data by looking at solar systems with more than one planet then "zoom-out" by including all solar-systems. 
+How incredibly interesting. This portion of project 2 deals with analyzing exoplanets of individual solar systems along with their average mass, eccentricity, and orbital period. By using data-wrangling, subsetting the data for this desired visualization was done with ease. We first "zoom-in" to the data by looking at solar systems with more than one planet then "zoom-out" by including all solar-systems. 
 
-###Data Wrangling
+##Data Wrangling
 ```{r message=FALSE}
 source("../02 Data Wrangling/eccentricity.R",echo=TRUE)
 ```
@@ -58,9 +53,12 @@ Finally, for ease of representing the mean cummulative distribution of planet ma
 
 This Is done yet again for the second graph, yet the filter(Planets >1) workflow portion is ommited. 
 
-###Visualizations
+##Visualizations
 ```{r message=FALSE, fig.width=12, fig.height=7.5}
 source("../03 Visualizations/eccen_analysis_1.R", echo=TRUE)
+```
+
+```{r message=FALSE, fig.width=12, fig.height=7.5}
 source("../03 Visualizations/eccen_analysis_2.R", echo=TRUE)
 ```
 
