Included title to first wrangling/visualization to match Adam's formatting

--- a/00 Doc/DV_RProject2.Rmd
+++ b/00 Doc/DV_RProject2.Rmd
@@ -18,6 +18,7 @@ source("../01 Data/load_packages.R",echo=TRUE)
 ```{r message=FALSE}
 source("../01 Data/create-df.R",echo=TRUE)
 ```
+# Average Mass and Radius Analysis
 
 ## Data Wrangling
 
